--- a/drivers/i2c/muxes/Kconfig
+++ b/drivers/i2c/muxes/Kconfig
@@ -15,4 +15,17 @@ config I2C_MUX_PCA954x
 	  This driver can also be built as a module.  If so, the module
 	  will be called pca954x.
 
+config BOSCH_BMA150
+   tristate "SMB380/BMA150 acceleration sensor support"
+   depends on I2C=y
+   help
+     If you say yes here you get support for Bosch Sensortec's 
+     acceleration sensors SMB380/BMA150.
+
+config BMA_150_XY_FLIP
+   bool "FLIP x y axis on BMA150"
+   depends on BOSCH_BMA150
+   help
+     Flip X Y 
+
 endmenu
